# qgc-bazel

./: .bazelrc  BUILD.bazel  Dockerfile.arm64  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-qgc-bazel-build  bazel-testlogs  build-docker.sh  rebuild-and-test.sh
.github/workflows/: build-amd64-gcp-copy.yml  build-amd64-gcp.yml  build-amd64.yml  build-arm64.yml  build-multiarch-gcp-amd64.yml  build-multiarch-gcp-arm64.yml  build-multiarch-gcp.yml  build-qgc-arm64-docker.yml  build-qgc-arm64-original.yml  build-qgc-arm64.yml  docker-publish.yml  qgc-build.yml  release.yml
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.amd64Flow  Dockerfile.arm64  Dockerfile.cross  Dockerfile.gh  Dockerfile.multi  Dockerfile_workflow.amd64  build-docker.sh  build-push-action  qt_fallback_test.Dockerfile
gh/: GITHUB_MULTI_ACCOUNT_GUIDE.md  gh-env.sh  gh-switch-env.sh  gh-switch.sh  multi-account-setup.sh  setup-spyyy666.sh
hello_world/: BUILD.bazel  main.cpp
scripts/: build-docker-amd64.sh  build-docker.sh  buildx-arm64.sh
toolchains/: BUILD.bazel  cc_toolchain_config.bzl  repositories.bzl
