# //BUILD.bazel.native - 用於原生 ARM64 環境的簡化配置
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cmake(
    name = "qgroundcontrol_cmake",
    # QGC 原始碼來源
    lib_source = "@qgroundcontrol_src//:all",
    # 期望的輸出二進制檔案名稱
    out_binaries = ["QGroundControl"],
    
    # --- 穩定性優化的編譯設定 ---
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Debug",  # 使用 Debug 模式減少優化問題
        "CMAKE_C_FLAGS": "-O1 -g0 -fno-strict-aliasing",
        "CMAKE_CXX_FLAGS": "-O1 -g0 -fno-strict-aliasing",
        # 限制並行編譯降低記憶體壓力
        "CMAKE_COMPILE_WARNING_AS_ERROR": "OFF",
        # 如果使用 Ninja，限制並行任務
        "CMAKE_JOB_POOLS": "compile=1;link=1",
    },
    
    # 設定環境變數來控制編譯行為
    env = {
        "MAKEFLAGS": "-j1",  # 強制單執行緒編譯
        "CC": "gcc",
        "CXX": "g++",
    },
    
    visibility = ["//visibility:public"],
)