load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cmake(
    name = "qgroundcontrol_cmake",
    lib_source = "@qgroundcontrol_src//:all",
    out_binaries = ["QGroundControl"],
    
    # Pass configuration variables to CMake, equivalent to -D<KEY>=<VALUE>.
    # This is the primary mechanism for injecting dependency paths
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Debug",
        "CMAKE_C_FLAGS": "-O1 -g0 -fno-strict-aliasing",
        "CMAKE_CXX_FLAGS": "-O1 -g0 -fno-strict-aliasing",
        "CMAKE_COMPILE_WARNING_AS_ERROR": "OFF",
        "CMAKE_C_COMPILER": "/usr/bin/aarch64-linux-gnu-gcc",
        "CMAKE_CXX_COMPILER": "/usr/bin/aarch64-linux-gnu-g++",
    },
    env = {
        "CC": "/usr/bin/aarch64-linux-gnu-gcc",
        "CXX": "/usr/bin/aarch64-linux-gnu-g++",
    },
    
    visibility = ["//visibility:public"],
)