load(":cc_toolchain_config.bzl", "cc_toolchain_config")

# //toolchains/BUILD.bazel
package(default_visibility = ["//visibility:public"])

cc_toolchain_config(name = "aarch64_linux_gnu_config")

cc_toolchain(
    name = "aarch64_linux_gnu_toolchain_impl",
    toolchain_identifier = "aarch64-linux-gnu-toolchain",
    toolchain_config = ":aarch64_linux_gnu_config",
    all_files = "@aarch64_linux_gnu_toolchain//:all_files",
    compiler_files = "@aarch64_linux_gnu_toolchain//:all_files",
    dwp_files = "@aarch64_linux_gnu_toolchain//:all_files",
    linker_files = "@aarch64_linux_gnu_toolchain//:all_files",
    objcopy_files = "@aarch64_linux_gnu_toolchain//:all_files",
    strip_files = "@aarch64_linux_gnu_toolchain//:all_files",
    supports_param_files = 1,
)

filegroup(
    name = "empty",
    srcs = [],
)

toolchain(
    name = "aarch64_linux_gnu_toolchain",
    
    # Assuming the CI runner is x86_64 for cross-compilation
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],

    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    toolchain = ":aarch64_linux_gnu_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
